fixed background on mobile and menu size

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -3739,15 +3739,20 @@
 
 		@media screen and (max-width: 736px) {
 
-			html {
-				transform: rotate(-90deg);
-				transform-origin: left top;
-				width: 100vh;
-				overflow-x: hidden;
-				position: absolute;
-				top: 100%;
-				left: 0;
-			}
+			#home-bg {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-color: #212931;
+			background-image: url("../../images/home-bg2.jpeg");
+			background-size: cover;
+			background-position: center;
+			background-repeat: no-repeat;
+			background-attachment: fixed;
+			z-index: -1;
+		}
 
 			#logo h1 {
 				text-align: left;
@@ -4702,7 +4707,7 @@
 		@media screen and (max-width: 736px) {
 
 			#navPanelToggle {
-				font-size: 0.8rem;
+				font-size: 1.10rem;
 				padding: 0.25rem 1rem;
 			}
 
